# SimplePanner

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test.yml
docs/: design.md  gui_developer_guide.md  gui_test_report.md  requirements.md  tasks.md  user_manual.md
include/: delay_line.h  pan_calculator.h  parameter_smoother.h  parameter_utils.h  plugids.h  plugincontroller.h  plugineditor.h  pluginprocessor.h
source/: plugincontroller.cpp  plugineditor.cpp  pluginfactory.cpp  pluginprocessor.cpp
tests/integration/: README.md  test_processor_state.cpp
tests/manual/: README.md  gui_test_procedure.md  test_procedure.md
tests/unit/: README.md  test_delay_line.cpp  test_gui_formatting.cpp  test_gui_parameter_sync.cpp  test_gui_visual.cpp  test_pan_calculation.cpp  test_parameter_conversion.cpp  test_parameter_smoother.cpp
